ti-fe-2306214510/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accommodation-fe-ti-service
  namespace: default
spec:
  selector:
    app: accommodation-fe-ti
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
